# sensei_nakama

./: install.sh  pyproject.toml
programs/sensei_nakama/: main.py  sensei_nakama.conf
