[tool.poetry]
name = "sensei_nakama"
version = "0.1.0"
description = ""
authors = ["julienkolani <julienkolani0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
configparser = "^7.0.0"
rocket-python = "^1.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
